--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                         <p class="card-text">
                             <b>Sprintgott nimmt Stellung:</b><br>
 							Zur Eröffnung des Berliner Flughafens, warum ihm Gott höchstpersönlich zum geleisteten Zivildienst dankte, 
-							zum überfälligem Rücktritt von Simon Ammann,
+							zum überfälligen Rücktritt von Simon Ammann, wie er den Weltverband zum Einführen der Sprint-WM gezwungen hat, 
 							er spricht über Blogs von Kollegen und andere Dinge die im Moment tiefer Fallen ursprünglich als von Mutter Erde angedacht.
+							Zu guter Letzt
 							<br>
 							<br>
 							Du hast die PK verpasst? Hier kannst du sie nachschauen:
