--- a/index.html
+++ b/index.html
@@ -15,30 +15,6 @@
 </head>
 <body>
 
-<!--<div id="slides" class="carousel slide" data-ride="carousel">-->
-<!--<ul class="carousel-indicators">-->
-<!--<li data-target="#slides" data-slide-to="0" class="active"></li>-->
-<!--<li data-target="#slides" data-slide-to="1"></li>-->
-<!--<li data-target="#slides" data-slide-to="2"></li>-->
-<!--</ul>-->
-<!--<div class="carousel-inner">-->
-<!--<div class="carousel-item active">-->
-<!--<img class="pic-s" src="pic/P1000067.JPG">-->
-<!--<div class="pic p1"></div>-->
-<!--<div class="carousel-caption">-->
-<!--<h1 class="display-1">GibbiXBlizzers</h1>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="carousel-item">-->
-<!--<img  class="pic-s" src="pic/P1000175.jpg">-->
-<!--<div class="pic p2"></div>-->
-<!--</div>-->
-<!--<div class="carousel-item">-->
-<!--<img  class="pic-s" src="pic/P1000039.JPG">-->
-<!--<div class="pic p3"></div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
 <div class="parallax" id="parallax0">
     <h2 class="display-5" style="text-shadow: black 1px 1px 10px; color:white">
         Florian Moser
@@ -52,7 +28,36 @@
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    <img class="card-img-top" src="pic/pk.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Hoch fligen, tief fallen 2</h5>
+                        <p class="card-text">
+							Der bekannteste deutschsprachige Dichter und Denker aus dem 21. Jahrhundert, Eko Fresh, fragte sich in einem seiner bekanntesten Werke:
+                            <br><br>
+                            «Was ist passiert?»
+                            <br><br>
+                            Mit dieser Frage war ich heute ein wiederholtes Mal konfrontiert. Eko Fresh bekam Hilfe: Ein Vogel hat's ihm zugezwitschert und erzählte ihm die Geschichte von einem gewissen U-Bahn Ficker.
+                            Im Gegensatz zu Eko Fresh, konnte ich nicht auf fliegende Unterstützung zurückgreifen. Einerseits, weil ein grosser Anteil am heimischen Vogelbestand, wegen den neuen rotierenden von rot-grün geförderten Massenvernichtungsgeräten, genannt Windkraftanlagen, einen grausamen und qualvollen Tod erleben mussten und müssen und andererseits die Zugvögel wegen der noch andauernden Pandemie seit einem Jahr an der Italienischen Grenze bei menschenunwürdigen Bedingungen festgehalten werden. Ausserdem hat der schweizerische Luftraum seit der Einführung des 5G-Standartes und der Abschaffung der Bürozeiten bei der Luftwaffe einiges an Attraktivität verloren. Selbst grosse Firme aus dem Kanton Zug, welche bislang an immer an billiger Ware aus Afrika interessiert waren und sich für sie einsetzten, wollen seit kurzem nichts mehr von den Zugvögeln wissen und kehren ihnen den Rücken zu. Eigentlich erstaunlich, wenn man bedenkt, wie sich genau diese Firmen sonst eigentlich tatkräftig für das Wohl von Mensch und Umwelt einsetzten. Egal. CA$H IS KING. Muss man nicht verstehen.<br><br>
+                            Was bleibt mir also übrig? Wie kann ich aufarbeiten, was mir in letzter Zeit alles widerfahren ist?<br><br>
+                            Ich könnte zum Beispiel diesen Blog brauchen, um das Erlebte zu verarbeiten. Aber dann müsste ich Gefühle zeigen. Und was zeigt ein Spritgott nicht? Genau Gefühle (Art. 1, Abs. 1) Hier stellt sich der aufmerksame Leser völlig zurecht die Frage: «Moment. Muss sich der Sprintgott an Gesetzte halten. Und sind Gesetzte eigentlich nicht zum Brechen da?» Hier kann ich nur darauf hinweisen, dass sich auch der Sprintgott an einige Gesetze halten muss. Zum Beispiel, dass der Sprintgott nicht an der SPM teilnehmen darf und nicht selbst darüber entscheiden darf, dass er an diesem Wettkampf nicht teilnehmen will. Und genau dies ist der Punkt. Was zur Hölle ist passiert? Bin ich zu wenig gut? Bin ich zu überheblich, zu arrogant? Kann ich nicht mit Menschen umgehen? Habe ich eine unerträgliche Stimme, Körperhaltung, unerträgliches Gesicht? Sorgt meine Anwesenheit für schlechte Vibes? Bin ich zu laut? Rede ich zu viel? Stinke ich? (und nicht Fabian?)<br><br>
+                            Ich weiss es nicht! All diese Fragen kann ich nicht beatworten.<br><br>
+                            Was ich aber leider weiss, ist das mein Postensetzter-Ranking-Index, trotz internationaler Erfahrung, unermesslich hoch ist und gleichzeitig das Einzige ist, was an mir noch positiv ist. Der Rest fällt. Fällt immer weiter. Durch den negativen Zahlenraum bis ins unendliche. <br><br>
+                            Wieso ich dies wiess? <br><br>
+                            Lange Geschichte, die mit der grundlegenden Erkenntnis enden wird: Entweder verändere ich mich oder ich verändere die Wahrnehmung über mich. Wenn du bis jetzt gelesen hast, dann wirst du bemerkt haben, dass letzteres der Fall ist. <br><br>
+                            Solidarisiere dich noch heute mit dem Sprintgott, zeig Flagge und trage den brandneuen Merch:
+                            <br>
+                            <div class="row">
+                                <img class="card-img-top col-4" src="pic/merch2.png" alt="Card image cap">
+                                <img class="card-img-top col-4" src="pic/merch3.png" alt="Card image cap">
+                                <img class="card-img-top col-4" src="pic/merch1.png" alt="Card image cap">
+                            </div>
+                            <br>
+							<a href="https://www.spreadshirt.ch/shop/user/isga/accessoires/caps-muetzen/" class="btn btn-primary" target="_blank">zum Merch</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">«Ihr habt lang drauf gewartet, das Comeback des Jahres»</h5>
                         <p class="card-text">
@@ -72,12 +77,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<div class="main-content">
-    <div class="container">
-        <div class="row">
             <div class="col-12">
                 <div class="card">
                     <img class="card-img-top" src="pic/indoorsprint.jpg" alt="Card image cap">
