--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <img class="card-img-top col-sm-4" src="pic/merch1.png" alt="Card image cap">
                             </div>
                             <br>
-							<a href="https://www.spreadshirt.ch/shop/user/isga/accessoires/caps-muetzen/" class="btn btn-primary" target="_blank">zum Merch</a>
+							<a href="https://www.spreadshirt.ch/shop/user/isga/" class="btn btn-primary" target="_blank">zum Merch</a>
                         </p>
                     </div>
                 </div>
